added zsh dotfiles, fixed a bug in the add_dotfile.sh script

--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,8 +1,8 @@
 unbind r
 bind r source-file ~/.config/tmux/tmux.conf
 
-set -g default-command /usr/bin/fish
-set -g default-shell /usr/bin/fish
+set -g default-command /usr/bin/zsh
+set -g default-shell /usr/bin/zsh
 
 set -g mouse on
 
