--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -8,35 +8,49 @@ set -g mouse on
 
 setw -g mode-keys vi
 
-#unbind the default prefix
+# unbind the default prefix
 unbind C-b
-#bind ctrl+space as the prefix
+
+# bind ctrl+space as the prefix
 set-option -g prefix C-space
 bind-key C-space send-prefix
 
+# switch pane with ctrl + vim keys
 bind -r ^ last-window
 bind -r h select-pane -L
 bind -r j select-pane -D
 bind -r k select-pane -U
 bind -r l select-pane -R
 
-#sets the position of the status bar
+# Start windows and panes at 1, not 0
+set -g base-index 1
+set -g pane-base-index 1
+set-window-option -g pane-base-index 1
+set-option -g renumber-windows on
+
+# pane splits open in the same directory
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
+# sets the position of the status bar
 set-option -g status-position top
 
 
 ## MY SCRIPTS
 
-#type :help-keybindings to show tmux keybindings
+# type :help-keybindings to show tmux keybindings
 set -g command-alias[100] 'help-keybindings=run-shell "~/dotfiles/scripts/tmux_show_default_keybindings.sh"'
 
 
 
-#list of plugins
+
+## PLUGINS
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'bjesus/muxile'
 set -g @plugin 'catppuccin/tmux'
 
-#initialize tmux plugin manager [KEEP THIS AT THE BOTTOM OF THE FILE]
+# initialize tmux plugin manager [KEEP THIS AT THE BOTTOM OF THE FILE]
 run '~/.tmux/plugins/tpm/tpm'
