--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,11 +13,10 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 13
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
+font pango:DejaVu Sans 14
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -40,11 +39,16 @@ exec --no-startup-id blueman-applet
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer -q -D pulse set Master 5%+ unmute
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer -q -D pulse set Master 5%- unmute
+bindsym XF86AudioMute exec --no-startup-id amixer -q -D pulse set Master toggle
+bindsym XF86AudioMicMute exec --no-startup-id amixer -q -D pulse set Capture toggle
 
+
+
+# use xbacklight to adjust brightness
+bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +10%
+bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 10%-
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
@@ -56,7 +60,7 @@ tiling_drag modifier titlebar
 bindsym $mod+Return exec ~/dotfiles/scripts/open_tmux.sh
 
 # kill focused window
-bindsym $mod+q kill
+bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 # A more modern dmenu replacement is rofi:
@@ -186,6 +190,14 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+# colors
+# colorclass    border          background      text            indicator
+client.focused  #E35420         #E95420         #ffffff         #E95420 
+
+# gaps
+gaps inner 10
+gaps outer 0
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 # bar {
@@ -196,7 +208,10 @@ bindsym $mod+r mode "resize"
 exec --no-startup-id polybar
 
 # background
-exec feh --bg-scale ~/dotfiles/aesthetics/portal_background.webp
+exec --no-startup-id feh --bg-scale ~/dotfiles/aesthetics/portal_background.webp
+
+# notifications daemon
+exec --no-startup-id dunst &
 
 # set us keyboard by default
 # super + space to toggle keyboard layout (us <==> us int with dead keys)
