--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -494,6 +494,7 @@ command_on_bell none
 #: Window layout {{{
 
 remember_window_size  yes
+detect_window_size_change yes
 initial_window_width  640
 initial_window_height 400
 
